--- a/education.html
+++ b/education.html
@@ -7,6 +7,9 @@
     <title>my first github</title>
 </head>
 <body>
-    
+   <h1>i can do it </h1>
+  <h2>may you go now</h2>
+
+ 
 </body>
 </html>
