--- a/education.html
+++ b/education.html
@@ -9,7 +9,7 @@
 <body>
    <h1>i can do it </h1>
   <h2>may you go now</h2>
-
+<p>this is my faveret gan er koto rat ami aka thakbo</p>
  
 </body>
 </html>
