--- a/education.html
+++ b/education.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1>i can do it </h1>
+   <h1>i can do the github.com </h1>
   <h2>may you go now</h2>
 <p>this is my faveret gan er koto rat ami aka thakbo</p>
  
