--- a/education.html
+++ b/education.html
@@ -11,6 +11,6 @@
    <h1>i can do the github.com </h1>
   <h2>may you go now</h2>
 <p>this is my faveret gan er koto rat ami aka thakbo</p>
- 
+ <img src="bethe - Copy - Copy.jpg" alt=""> 
 </body>
 </html>
