--- a/education.html
+++ b/education.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <h1>i can do the github.com </h1>
-  <h2>may you go now</h2>
+  <h2>may you go now again and again</h2>
 <p>this is my faveret gan er koto rat ami aka thakbo</p>
  <img src="bethe - Copy - Copy.jpg" alt="">
  <img src="nice.JPG" alt=""> 
